# mycitadel-desktop

./: .gitignore  .rustfmt.toml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  MyCitadel.yml  README.md  build-release.bat  build.rs  deb-build.sh  flake.nix  io.mycitadel.Wallet.json  license_header  meson.build  mycitadel.rc  wallet.doap
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/: io.mycitadel.Wallet.appdata.xml  io.mycitadel.Wallet.desktop
contrib/: README.md  cargo-config.toml  shell.nix
data/: io.mycitadel.Wallet.appdata.xml.in  io.mycitadel.Wallet.desktop.in  meson.build
data/icons/: meson.build
debian/: README.source  changelog  control  copyright  debhelper-build-stamp  files  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  mycitadel.cron.d.ex  mycitadel.doc-base.EX  mycitadel.substvars  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
debian/mycitadel/DEBIAN/: control  md5sums
debian/mycitadel/usr/share/appdata/: io.mycitadel.Wallet.appdata.xml
debian/mycitadel/usr/share/doc/mycitadel/: README.Debian  copyright
debian/mycitadel/usr/share/glib-2.0/schemas/: io.mycitadel.Wallet.gschema.xml
doc/: INSTALL.md
po/: POTFILES  meson.build
res/: device_row.glade  devices.glade  settings.glade  spending_row.glade  wallet.glade
src/: config.rs  device_row.rs  devices.rs  lib.rs  main.rs  meson.build  mycitadel.gresource.xml  settings.rs  spending_row.rs  types.rs  wallet.rs
src/model/: electrum.rs  file.rs  format.rs  mod.rs  onchain.rs  psbt.rs  sign.rs  taptree.rs  template.rs  types.rs  ui.rs  unsatisfiable.rs  wallet.rs  xkey.rs
src/view/: mod.rs  wallet.glade
src/view/about/: about.glade  component.rs  mod.rs  view_model.rs  widget.rs
src/view/devices/: devices.glade  devices.rs  mod.rs
src/view/devices/device_row/: device_row.glade  mod.rs  view.rs  view_model.rs  widget.rs
src/view/invoice/: component.rs  invoice.glade  view_model.rs  widget.rs
src/view/issue/: issue.glade
src/view/launch/: component.rs  launch.glade  launch.rs  mod.rs  widget.rs
src/view/pay/: component.rs  mod.rs  pay.glade  view_model.rs  widget.rs
src/view/pay/beneficiary_row/: beneficiary_row.glade  view_model.rs  widget.rs
src/view/psbt/: component.rs  mod.rs  psbt.glade  view_model.rs  widget.rs
src/view/psbt/sign_row/: mod.rs  sign_row.glade  view_model.rs  widget.rs
src/view/psbt/xpriv_dlg/: component.rs  mod.rs  view_model.rs  widget.rs  xpriv_dlg.glade
src/view/settings/: component.rs  mod.rs  settings.glade  view.rs  view_model.rs  widget.rs
src/view/settings/spending_row/: mod.rs  spending_row.glade  view.rs  view_model.rs  widget.rs
src/view/settings/xpub_dlg/: component.rs  mod.rs  view_model.rs  widget.rs  xpub_dlg.glade
src/view/tx/: mod.rs
src/view/wallet/: component.rs  lnpbp.glade  mod.rs  view_model.rs  wallet-new.glade  wallet.glade  wallet.rs  widget.rs
src/view/wallet/asset_row/: asset_row.glade  mod.rs  view_model.rs  widget.rs
src/view/wallet/pay/: mod.rs  pay.glade  widget.rs
src/view/wallet/pay/beneficiary_row/: beneficiary_row.glade  mod.rs  view_model.rs  widget.rs
src/view/wallet/payto/: mod.rs  payto.glade  widget.rs
src/worker/: electrum.rs  electrum_watcher.rs  exchange.rs  mod.rs
