[package]
name = "mycitadel-desktop"
version = "1.3.0"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoraprime.ch>"]
description = "Bitcoin, Lightning and RGB wallet; part of MyCitadel software suite."
repository = "https://github.com/mycitadel/mycitadel-desktop"
homepage = "https://mycitadel.io"
keywords = ["lnp-bp", "bitcoin", "lightning", "rgb", "wallet"]
categories = ["cryptography::cryptocurrencies", "gui", "hardware-support"]
edition = "2021"
rust-version = "1.56.0"
readme = "README.md"
license = "AGPL-3.0"
exclude = [".github", "assets", "CODE_OF_CONDUCT.md"]

[lib]
name = "mycitadel"

[[bin]]
name = "mycitadel"
path = "src/bin/mycitadel.rs"
required-features = ["ui"]

[[bin]]
name = "mcw"
path = "src/bin/mcw.rs"
required-features = ["cli"]

[dependencies]
gtk = "0.15.5"
relm = "0.23.0"
relm-derive = "0.23.0"
gladis = "2.1.2"
once_cell = "1.10.0"
chrono = "0.4.19"
urlencoding = "2.1.0"
ureq = { version = "2.4.0", features = ["json"] }

amplify = "3.14.2"
bitcoin = "0.29.2"
miniscript = "9.0.1"
rgb-std = "0.10.2"
rgb-wallet = { version = "0.10.2", features = ["fs"] }
rgb-contracts = { version = "0.10.0-beta.2", features = ["electrum"] }
bitcoin_scripts = "0.10.0"
bitcoin_blockchain = "0.10.0"
descriptor-wallet = { version = "0.10.0", features = ["miniscript", "keygen", "hwi", "construct"] }
bpro = { version = "0.4.0", features = ["electrum"] }
hwi = "0.6.0"
electrum-client = "0.14.0"

clap = { version = "~3.2.23", features = ["derive"], optional = true }
serde_crate = { package = "serde", version = "1" }
serde_with = { version = "1.14", optional = true }
serde_json = { version = "1.0.79" }
serde_yaml = { version = "0.9", optional = true }
colored = { version = "2", optional = true }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.1"

[features]
default = ["ui"]
ui = []
cli = ["clap", "serde", "colored"]
serde = ["serde_with", "serde_yaml",
         "amplify/serde", "chrono/serde", "bitcoin/serde", "miniscript/serde", "descriptor-wallet/serde"]

[patch.crates-io]
rgb-core = { git = "https://github.com/RGB-WG/rgb-core" }
rgb-std = { git = "https://github.com/RGB-WG/rgb-wallet" }
rgb-wallet = { git = "https://github.com/RGB-WG/rgb-wallet" }
rgb-contracts = { git = "https://github.com/RGB-WG/rgb" }
bpro = { git = "https://github.com/pandora-prime/bpro" }
